--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a id = "click" href="" onclick="myFunction()" target="_blank">Click me</a>
 
     <div class="happy">
-        <img src="C:\Users\Asus\Desktop\Web Development\autoSearch\fast-cat-cat-excited.gif" alt="" class="happyCat">
+        <img src="fast-cat-cat-excited.gif" alt="" class="happyCat">
     </div>
 
     <div class="clickCounter">
